# itm

./: .README.md.swp  .pre-commit-config.yaml  README.md  airflow.env  docker-compose.yml  env_airflow.env  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: api.yml  pre-commit.yml
airflow/: airflow.cfg
airflow/dags/: main_dag.py
api/: Dockerfile  README.md  __init__.py  application.py  image.py  images.py  monitoring.py  pyproject.toml  requirements.txt
api/api/: application.py  database.py
api/tests/: test_application.py
backend/: Dockerfile  README.md  __init__.py  download.py  generate.py  grayscale.py  load_result.py  md5.py  pyproject.toml  requirements.txt  update_monitoring.py  urls.txt
backend/backend/: __init__.py  database.py  download.py  generate.py  grayscale.py  load_result.py  md5.py  update_monitoring.py
backend/tests/: test_download.py  test_generate.py  test_grayscale.py  test_md5.py
dags/: downloadImage.py  helloWorld.py  mainDag.py  main_dag.py
models/: README.md  pyproject.toml
models/models/: event.py  image.py  monitoring.py  url.py
