[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["knil-sama"]
readme = "README.md"

packages = [
    {include = "backend"}
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.25.1"
pymongo = "4.4.1"
pillow = "10.0.0"
requests = "2.31.0"
models =  {path = "../models", develop = true}
apache-airflow = {version = "2.6.3", extras = ["celery", "postgres", "redis"]}

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-env = "0.8.2"
pytest-mock = "3.11.1"
polyfactory = "2.6.3"
pytest-cov = "4.1.0"
more_itertools= "10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "MONGO_INITDB_ROOT_USERNAME=test",
    "MONGO_INITDB_ROOT_PASSWORD=test",
    "BACKEND_DIRECTORY=workspace/backend",
    "BACKEND_DATA_DIRECTORY=${BACKEND_DIRECTORY}/data",
    "BACKEND_DOWNLOAD_DIRECTORY=${BACKEND_DATA_DIRECTORY}/download",
    "BACKEND_ERROR_DIRECTORY=${BACKEND_DATA_DIRECTORY}/download_error",
    "BACKEND_GRAYSCALE_DIRECTORY=${BACKEND_DATA_DIRECTORY}/grayscale"
]
