[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["knil-sama <cols.knil@gmail.com>"]
readme = "README.md"
packages = [
    {include = "models"},
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.7" # need to limit it because of airflow 2.6 not supporting it properly


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
